Completed data and log structures
 Added the data structure for the state and log, minor changes on the html and css to render properly

--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ li {
     color: #ffffff;
     text-align: left;
 }
+.display-list {
+    display: flex;
+}
+ul {
+    width: 50%;
+}
 input {
   font-size: 45px;
   margin-bottom: 10px;
